# SoftRenderer

./: .gitignore  CMakeLists.txt  Model.cpp  Model.h  README.md  geometry.h  main.cpp  renderer.cpp  renderer.h  tgaimage.cpp  tgaimage.h
Note/: SSAO屏幕空间环境光遮蔽笔记.md  SoftRenderer完整渲染管线笔记.md  基础组件与渲染管线笔记.md  相机变换与坐标系.md  纹理映射与Phong光照笔记.md  透视校正插值与渲染改进笔记.md  阴影映射笔记.md
